--- a/env.in
+++ b/env.in
@@ -48,7 +48,7 @@ endif()
 include_directories(
     ${Python_INCLUDE_DIRS}
     ${Abcd_INCLUDE_DIRS}
-    ${Boost_INCLUDE_DIRS}
+    ${BOOST_INCLUDE_DIRS}
     ${MPI_INC_DIR}
     ${BLAS_LAPACK_SCALAPACK_INC}
     ${INC_DIRS}
@@ -58,7 +58,7 @@ include_directories(
 # libraries
 link_directories(
     ${Abcd_LIBRARY_DIRS}
-    ${Boost_LIBRARY_DIRS}
+    ${BOOST_LIBRARY_DIRS}
     ${BLAS_LAPACK_SCALAPACK_DIRS}
     ${MPI_LIB_DIR}
     ${LIB_DIRS}
