Remove dependencies to MUMPS

--- a/env.in
+++ b/env.in
@@ -17,22 +17,28 @@ set(Abcd_LIBRARY_DIRS
     ${ABCD_PROJECT_DIR}/lib/sparselib/lib/
 )
 # Compilation flags
-SET( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -m64 -z muldefs ${CMAKE_OPENMP_FLAG}")
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -m64 -z muldefs -std=c++11 ${CMAKE_OPENMP_FLAG}")
-SET( CMAKE_Fortran_FLAGS  "${CMAKE_Fortran_FLAGS} -m64 -z muldefs ${CMAKE_OPENMP_FLAG}")
+SET( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -m64 -z muldefs ${CMAKE_OPENMP_FLAG} -march=native")
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -m64 -z muldefs -std=c++11 ${CMAKE_OPENMP_FLAG} -march=native")
+SET( CMAKE_Fortran_FLAGS  "${CMAKE_Fortran_FLAGS} -m64 -z muldefs ${CMAKE_OPENMP_FLAG} -march=native")
 
 ##Dependencies
 # BOOST
-set(Boost_LIBRARIES
+set(BOOST_LIBRARIES
     boost_mpi
     boost_serialization
 )
 IF (PYTHON)
-    set(Boost_LIBRARIES
+    set(BOOST_LIBRARIES
         boost_python
-        ${Boost_LIBRARIES}
+        ${BOOST_LIBRARIES}
     )
 ENDIF()
+
+if("${USE_SPLDLT_ONLY}" STREQUAL "")
+    message(STATUS "Activation of MUMPS")
+    add_definitions(-DUSE_MUMPS)
+endif()
+
 # Others
 if(NOT PATOH MATCHES OFF)
     add_definitions(-DPATOH)
@@ -63,11 +69,19 @@ link_directories(
     ${MPI_LIB_DIR}
     ${LIB_DIRS}
 )
-set(LIBS
-    ${Boost_LIBRARIES}
+
+set(MUMPSLIBS)
+
+IF(NOT USE_SPLDLT_ONLY)
+set(MUMPSLIBS
     dmumps
     mumps_common
-    pord
+    pord)
+ENDIF()
+
+set(LIBS
+    ${BOOST_LIBRARIES}
+    ${MUMPSLIBS}
     sparse
     spblas
     mv
