--- a/env.in
+++ b/env.in
@@ -34,13 +34,18 @@ IF (PYTHON)
     )
 ENDIF()
 
-if("${USE_SPLDLT_ONLY}" STREQUAL "")
+if(${USE_MUMPS} EQUAL 1)
     message(STATUS "Activation of MUMPS")
     add_definitions(-DUSE_MUMPS)
 endif()
 
+if(${USE_SPLDLT} EQUAL 1)
+    message(STATUS "Activation of SPLDLT")
+    add_definitions(-DUSE_SPLDLT)
+endif()
+
 # Others
-if(NOT PATOH MATCHES OFF)
+if(PATOH MATCHES ON)
     add_definitions(-DPATOH)
     set(LIBS ${LIBS} patoh)
 endif()
@@ -72,11 +77,11 @@ link_directories(
 
 set(MUMPSLIBS)
 
-IF(NOT USE_SPLDLT_ONLY)
-set(MUMPSLIBS
-    dmumps
-    mumps_common
-    pord)
+IF(${USE_MUMPS} EQUAL 1)
+  set(MUMPSLIBS
+      dmumps
+      mumps_common
+      pord)
 ENDIF()
 
 set(LIBS
